--- a/package.json
+++ b/package.json
@@ -20,7 +20,11 @@
     "gravatar": "^1.8.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.7",
-    "request": "^2.88.2"
+    "react-notifications-component": "^3.4.1",
+    "react-toastify": "^8.2.0",
+    "request": "^2.88.2",
+    "stripe": "^8.214.0",
+    "uuid": "^3.4.0"
   },
   "devDependencies": {
     "concurrently": "^7.0.0",
